--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <% if user_signed_in? %>
   <%= link_to "Log out", destroy_user_session_path, data: { "turbo-method": :delete}%>
   <%= form_with(model: @task, url: tasks_path, method: :post) do |form| %>
@@ -34,16 +32,20 @@
     <% @tasks.each do |task| %>
       <li>
          <%= task.task %>
-         <%= link_to "remove task ", task_path(id:task.id), data: { "turbo-method": :delete }  %>
+         <%= link_to 'remove task ', task_path(id:task.id), data: { "turbo-method": :delete }  %>
       </li>
     <% end %>
   </ul>
-<% else %>
-  <p>No tasks available.</p>
-<% end %>
+  <% else %>
+    <p>No tasks available.</p>
+  <% end %>
+
+  <span> to change privacy settings</span> 
+  <%= link_to 'click here', edit_privacy_user_path(id:current_user.id) %> 
   
 <% else %>
   <span> <%= link_to "sing in" , new_user_session_path %></span>
   <span> or </span>
   <span> <%= link_to "sing up" , new_user_registration_path %> </span>
 <% end %>
+<div>
