few changes in UI

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -16,7 +16,7 @@
 
   <div class="field">
     <%= form.label :status %>
-    <%= form.select :status, ['todo', 'done']%>
+    <%= form.select :status, ['TODO', 'DONE']%>
   </div>
 
   <div class="actions">
