--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,92 +1,34 @@
 <% if user_signed_in? %>
-<div type="button" class="btn ">
-  <%= link_to "Log out", destroy_user_session_path, data: { "turbo-method": :delete}%>
+  <div style="text-align: right;">
+    <%= link_to "Log out", destroy_user_session_path, data: { "turbo-method": :delete}%>
   </div>
+
   <br>
   <div type="button" class="btn ">
-    <%= link_to "add new task" ,new_task_path %>
+    <%= link_to "Add new task" ,new_task_path,class:("btn btn-primary") %>
   </div>  
-  
-  <% if current_user.tasks.any? %>
-  <ol>
-    <div class="row">
-      <div class="col-3">
-        <p> tasks </p>
-      </div>
-      <div class="col-1">
-        <p> status </p> 
-      </div>
-      <div class="col-2">
-        <p> actions </p>
-      </div>
-    </div>
-    <% current_user.tasks.each do |task| %>
-      <li>
-      <div class="row">
-        <div class="col-3">
-          <%= task.task %>
-        </div>
-        <div class="col-1"> 
-          <%= task.status.upcase %>
-        </div>
-        <div class="col-2">
-          <%= link_to 'remove task ', task_path(id:task.id), data: { "turbo-method": :delete }  %>
-          <span> |</span>
-          <%= link_to 'edit' , edit_task_path(id:task.id) %>
-        </div>
-      </div>
-      </li>
-    <% end %>
-  </ol>
-  <% else %>
-    <p>No tasks available.</p>
-  <% end %>
-
+  <div>
+    <%= render 'home/list_of_tasks', tasks: @todo_tasks,task_type: "TODO" %>
+    <%= render 'home/list_of_tasks', tasks: @completed_tasks,task_type: "DONE"  %>
+  </div>
   <span> to change privacy settings</span> 
-  <%= link_to 'click here', edit_privacy_user_path(id:current_user.id) %> 
-  
-  <% else %>
-    
-    <div type="button" class="btn ">
-      <%= link_to "sing in" , new_user_session_path %>
+  <%= link_to 'Click here', edit_privacy_user_path(id:current_user.id) %> 
+<% else %>
+  <div style="text-align: right;">
+    <div type="button" class="btn " >
+      <%= link_to "Sing In" , new_user_session_path %>
     </div>
     <span> or </span>
     <div type="button" class="btn ">
-      <%= link_to "sing up" , new_user_registration_path %> 
-    </div>    
-  <% end %>
+      <%= link_to "Sing Up" , new_user_registration_path %> 
+    </div>
+  </div>
+      
+<% end %>
 <hr>
 <div>
-  <% if @public_users.any? %>
-    <div>
-      <h4>public tasks</h4>
-      <% @public_users.each do |user| %>
-      <ol>
-        <h5> <%= user.email %> </h5>
-        <div class="row">
-          <div class="col-3">
-            <h6> tasks </h6>
-          </div>
-          <div class="col-1">
-            <h6> status </h6> 
-          </div>
-        </div>
-      <% user.tasks.each do |task| %>
-        <li>
-          <div class="row">
-            <div class="col-3">
-              <%= task.task %>
-            </div>
-            <div class="col-1"> 
-              <%= task.status.upcase %>
-            </div>
-          </div>
-        </li>
-      <% end %>
-      </ol>
-    <% end %>
-  </div>
-  <% else %>
-  <h3> No public tasks </h3>
-  <% end %>
+  <h5> Pubick Tasks</h5>
+
+    <%= render 'home/list_of_public_tasks', tasks: @public_todo_tasks, task_type: "TODO" %>
+    <%= render 'home/list_of_public_tasks', tasks: @public_completed_tasks, task_type: "DONE" %>
 </div>
