remove some extra space

--- a/app/views/home/_list_of_public_tasks.html.erb
+++ b/app/views/home/_list_of_public_tasks.html.erb
@@ -23,5 +23,5 @@
     	<% end %>
   	</ol>
   <% else %>
-    <b>ther are no <%= task_type %> tasks </b>
+    <b>There are no <%= task_type %> tasks </b>
   <% end %></div>
